--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -35,6 +35,11 @@ stages:
     pool:
       name: Azure-UIP
     steps:
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
     - task: UiPathDeploy@3
       inputs:
         orchestratorConnection: 'Azure-UIpath'
