Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -30,7 +30,7 @@ stages:
   displayName: Create Assests
   jobs:
       - job: CreateAssests
-        pool: UiPath
+        pool: Azure-UIP
         steps:
         - task: UiPathAssets@3
           inputs:
