Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -51,11 +51,16 @@ stages:
   displayName: 'Deploy to TST Orchestrator'
   dependsOn: Build
   jobs:
-  - job: TestJob
-    displayName: 'Run tests'
-    steps:
-    - task: UiPathTest@3
-      inputs:
-        testTarget: 'TestProject'
-        orchestratorConnection: 'Azure-UIpath'
-        folderName: 'Shared'
+  - job: Run_Unit_Tests
+    displayName: Run Unit Tests
+  pool:
+    vmImage: 'Azure-UIP'
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '14.x'
+    displayName: 'Install Node.js'
+  - script: |
+      npm install
+      npm run test
+    displayName: 'Run Unit Tests'
