--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,14 +9,6 @@ variables:
   devOrchestrator: 'https://dev.uipath.com/'
   tstOrchestrator: 'https://tst.uipath.com/'
   prdOrchestrator: 'https://prd.uipath.com/'
-  projectJsonPath: "$(Build.SourcesDirectory)/project.json"
-  outputPath: "$(Build.ArtifactStagingDirectory)/Output"
-  orchestratorUrl: "$(devOrchestrator)"
-  robotEnvironment: "Development"
-  folderName: "Shared"
-  orchestratorConnection: "Azure-UIpath"
-  artifactName: "drop"
-
 stages:
 - stage: Build
   displayName: 'Create build artifact'
@@ -26,15 +18,12 @@ stages:
     - task: UiPathPack@3
       inputs:
         versionType: 'AutoVersion'
-        projectJsonPath: '$(projectJsonPath)'
-        orchestratorConnection: '$(orchestratorConnection)'
-        outputPath: '$(outputPath)'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(outputPath)'
-        ArtifactName: '$(artifactName)'
-        publishLocation: 'Container'
-
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        outputType: 'Process'
+        orchestratorConnection: 'Azure-UIpath'
+        outputPath: '$(Build.ArtifactStagingDirectory)'
+-publish: $(Build.ArtifactStagingDirectory)
+ artifact: drop 
 - stage: Asset
   displayName: 'Create assets'
   jobs:
@@ -42,25 +31,26 @@ stages:
     steps:
     - task: UiPathAssets@3
       inputs:
-        orchestratorConnection: '$(orchestratorConnection)'
+        orchestratorConnection: '$(Azure-UIpath)'
         folderName: '$(folderName)'
         assetActionType: 'Deploy'
         csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
-- stage: TstDeploy
-  displayName: 'Deploy to TST Orchestrator'
-  dependsOn: Build
-  jobs:
-  - job: Run_Unit_Tests
-    displayName: Run Unit Tests
-    pool:
-      name: 'Azure-UIP'
-    steps:
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '14.x'
-      displayName: 'Install Node.js'
-    - script: |
-        npm install
-        npm run test
-      displayName: 'Run Unit Tests'
+- stage: DeployDEV
+    displayName: Deploy build artifact to DEV
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - deployment: deployDEV
+        displayName: Deploy package to DEV Orchestrator
+        pool: Azure-UIP
+        environment: DEV
+        strategy:
+         runOnce:
+          deploy:
+           steps:
+            - task: UiPathDeploy@2
+              inputs:
+                orchestratorConnection: 'Azure-UIpath'
+                packagesPath: '$(Pipeline.Workspace)\drop'
+                folderName: 'Shared'
