--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,16 +17,15 @@ stages:
   - job: BuildArtifact
     steps:
     - task: UiPathPack@3
-  inputs:
-    versionType: 'AutoVersion'
-    projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-    outputType: 'Process'
-    orchestratorConnection: 'Azure-UIP'
-    outputPath: '$(Build.ArtifactStagingDirectory)'
- - publish: 
-     artifact: drop 
-    path: '$(Build.ArtifactStagingDirectory)'
-
+      inputs:
+        versionType: 'AutoVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
+        outputType: 'Process'
+        orchestratorConnection: 'Azure-UIP'
+        outputPath: '$(Build.ArtifactStagingDirectory)'
+    - publish: 
+        artifact: drop 
+        path: '$(Build.ArtifactStagingDirectory)'
 
 - stage: Asset
   displayName: 'Create assets'
@@ -56,5 +55,5 @@ stages:
           - task: UiPathDeploy@3
             inputs:
               orchestratorConnection: 'Azure-UIpath'
-              packagesPath: '$(Pipeline.Workspace)\drop'
+              packagesPath: '$(Pipeline.Workspace)/drop'
               folderName: 'Shared'
