--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,10 +23,11 @@ stages:
         outputType: 'Process'
         orchestratorConnection: 'Azure-UIP'
         outputPath: '$(Build.ArtifactStagingDirectory)'
-    - publish: 
-      artifact: drop 
-      path: '$(Build.ArtifactStagingDirectory)'
-
+    - task: PublishBuildArtifacts@1
+      inputs:
+       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+       ArtifactName: 'drop'
+       publishLocation: 'Container'
 
 - stage: Asset
   displayName: 'Create assets'
